# ai_quality_assistant

./: .env.example  .gitignore  AIGO_CHAT_README.md  README.md  dockerfile  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  tailwind.config.ts  test_direct_chat.py
.github/: copilot-instructions.md
app/: __init__.py  config.py  main.py  models.py
app/api/: __init__.py  chat.py  direct_chat.py  health.py
app/db/: dynamodb.py  mongo.py
app/domain/: __init__.py  direct_service.py  entities.py  events.py  services.py
app/infrastructure/: __init__.py  openai_client.py  session_store.py  websocket_manager.py
app/routes/: direct_chat.py  history.py
app/shared/: dependencies.py  jwt_utils.py
src/: App.tsx  config.ts  index.css
src/components/: AiGoChat.tsx  AnimatedBackground.tsx  AuthModal.tsx  ChartComponents.tsx  CustomErrorBoundary.tsx  DashboardCard.tsx  DataTable.tsx  ErrorFallback.tsx  LoadingSpinner.tsx  Navbar.tsx  PricingSection.tsx  ProcessingModal.tsx  ProtectedRoute.tsx  TaskNotificationListener.tsx  TranscriptionModal.tsx
src/config/: index.ts
src/contexts/: AuthContext.tsx
src/dialogs/: DialogQuickStart.tsx  NotificationsDialogs.tsx
src/hooks/: use-notification-poller.ts  use-task-status.ts  use-toast.ts  useAuth.tsx  useChatApi.ts  useFileUpload.ts  useNotifications.ts  usePagination.ts  useTaskPolling.ts  useTheme.ts
src/pages/: Dashboard.tsx  DashboardDemo.tsx  DashboardDemoDetail.tsx  DashboardDetail.tsx  Index.tsx  Login.tsx  Upload.tsx
src/types/: Task.ts  User.ts
src/utils/: chatHistory.ts
(+16 files in other folders)
