[tool.poetry]
name = "api-agent"
version = "0.1.0"
description = "FastAPI streaming conversation API for OpenAI Assistant AiGO"
authors = ["maraujo"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
websockets = "^15.0.1"
openai = "^1.97.1"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
boto3 = "^1.40.4"
pynamodb = "^6.1.0"
pyjwt = "^2.10.1"
mangum = {extras = ["standard"], version = "^0.19.0"}
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
